--- a/코테/섹션4/[05] K번째 큰수.html
+++ b/코테/섹션4/[05] K번째 큰수.html
@@ -7,30 +7,19 @@
         <script>
             function solution(N, K, arr) {
                 let answer = 0;
-                let num = 0;
-                let numArr = [];
-                let idx = 0;
+                let tmp = new Set();
+            
                 for(let i=0; i<N; i++) {
-                    num = 0;
-
-                    for(let j=0; j<N; j++) {
-                        numArr[idx] = arr[j];
-                        for (let k=0; k<3; k++) {
-                            if(num === j) num++;
-                            else if(num === N) num = 0;
-                            
-                            numArr[idx] += arr[num];
-                            num++;
+                    for(let j=i+1; j<N; j++) {
+                        for(let k=j+1; k<N; k++) {
+                            tmp.add(arr[i] + arr[j] + arr[k]);
+                            console.log("i=", i, "j=",j, "k=",k)
                         }
-                        idx++;
                     }
                 }
-                console.log(numArr.sort((a, b) => {
-                    if(a > b) return -1
-                    if (a === b) return 0
-                    if(b > a) return 1
-                }));
-                console.log(numArr);
+
+                let card = Array.from(tmp).sort((a,b) => b-a);
+                answer = a[K-1];
                 return answer;
             }
             let arr = [13, 15, 34, 23, 45, 65, 33, 11, 26, 42]
