--- a/코테/섹션5/[01] 두 배열 합치기.html
+++ b/코테/섹션5/[01] 두 배열 합치기.html
@@ -8,11 +8,7 @@
             function solution(arr1, arr2) {
                 let answer = []
                 let arr = [...arr1, ...arr2];
-                answer = arr.sort((a, b) => {
-                    if(a > b) return 1
-                    if(a === b) return 0
-                    if(a < b) return -1
-                })
+                answer = arr.sort((a, b) => a-b);
                 return answer;
             }
             let arr1 = [1, 3, 5]
