--- a/코테/섹션5/[07] 아나그램(해쉬).html
+++ b/코테/섹션5/[07] 아나그램(해쉬).html
@@ -6,8 +6,24 @@
     <body>
         <script>
             function solution(str1, str2) {
-                let answer = "";
+                let answer = "YES";
+            
+                let sH = new Map();
+                for(let x of str1) {
+                    if(sH.has(x)) {
+                        sH.set(x, sH.get(x)+1);
+                    } else {
+                        sH.set(x, 1);
+                    }
+                }
+                for(let x of str2) {
+                    if(!sH.has(x) || sH.get(x) === 0) answer = "NO";
 
+                    //if문 해당 안되면 value 1씩 빼기
+                    sH.set(x, sH.get(x)-1);
+                }
+
+                /*
                 //몇번 찍혔는지 정리할 오브젝트를 생성하기 위해 문자열의 중복을 제거하고 내림차순으로 정리한다.
                 let str1N = Array.from([...new Set(str1)]).sort();
                 let str2N = Array.from([...new Set(str2)]).sort();
@@ -44,10 +60,11 @@
                         break;
                     }
                 }
+                */
                 return answer;
             }
-            let str1 = "abaCC"
-            let str2 = "Caaab"
+            let str1 = "AbaAeCe"
+            let str2 = "baeeACA"
             console.log(solution(str1, str2));
         </script>
     </body>
