--- a/코테/섹션5/[01] 두 배열 합치기.html
+++ b/코테/섹션5/[01] 두 배열 합치기.html
@@ -6,13 +6,30 @@
     <body>
         <script>
             function solution(arr1, arr2) {
+                // let answer = []
+                // let arr = [...arr1, ...arr2];
+                // answer = arr.sort((a, b) => a-b);
+                // return answer;
                 let answer = []
-                let arr = [...arr1, ...arr2];
-                answer = arr.sort((a, b) => a-b);
+                let p1 = 0;
+                let p2 = 0;
+
+                while(p1 < arr1.length && p2 < arr2.length) {
+                    if(arr1[p1] <= arr2[p2]) answer.push(arr1[p1++]);
+                    else answer.push(arr2[p2++]);
+                }
+                while(p1 < arr1.length) answer.push(arr1[p1++]);
+                while(p2 < arr2.length) answer.push(arr2[p2++]);
+
                 return answer;
             }
+
+            //1,2비교해서 1넣구 2,3비교해서 2넣구 3,3비교해서 3넣구 3,5비교해서 3넣구 5 6 비교해서 5넣구
             let arr1 = [1, 3, 5]
             let arr2 = [2, 3, 6, 7, 9]
+
+            //2포인터 알고리즘으로 해야함? => sort하면 안됨
+
             console.log(solution(arr1, arr2));
         </script>
     </body>
