--- a/코테/섹션5/[02] 공통원소 구하기.html
+++ b/코테/섹션5/[02] 공통원소 구하기.html
@@ -6,13 +6,32 @@
     <body>
         <script>
             function solution(arr1, arr2) {
+                // let answer = [];
+
+                // answer = arr1.filter(a => a === arr2.find(b => {
+                //     if(a===b) return b
+                // }));
+
+                // answer.sort((a,b) => a-b)
+                // return answer;
+
+                //2pointers로
                 let answer = [];
+                let p1 = 0;
+                let p2 = 0;
+                arr1 = arr1.sort((a,b) => a-b);
+                arr2 = arr2.sort((a,b) => a-b);
 
-                answer = arr1.filter(a => a === arr2.find(b => {
-                    if(a===b) return b
-                }));
-
-                answer.sort((a,b) => a-b)
+                while(p1<arr1.length && p2<arr2.length) {
+                    if(arr1[p1] === arr2[p2]) {
+                        answer.push(arr1[p1++]);
+                        p2++;
+                    }
+                    else if(arr1[p1] < arr2[p2]) p1++;
+                    else p2++;
+                }
+                //1 2 3 5 9
+                //2 3 5 7 8
                 return answer;
 
             }
