--- a/코테/섹션5/[03] 연속 부분수열 1.html
+++ b/코테/섹션5/[03] 연속 부분수열 1.html
@@ -13,8 +13,8 @@
                     6이면 answer을 플러스하고
                 */
 
-               
-               for(let i=0; i<N; i++) {
+                /*
+                for(let i=0; i<N; i++) {
                    let calc = arr[i];
                    let num = i+1;
                     console.log("시작", calc, i)
@@ -27,6 +27,38 @@
                         num++;
                     }
                 }
+                */
+
+
+                //2pointer 알고리즘
+                let lt = 0;
+                let rt = 0;
+                let calcNum = arr[lt]; //1
+                while(lt<N && rt<N) {  //0,0, : 1
+                    if(calcNum === M) {
+                        //calcNum이 M이랑 같을 경우, answer을 1 증가 시킨다.
+                        answer++;
+
+                        //다음 부분 수열로 넘어가야 하기 때문에 calcNum에서 3(arr[lt] / lt는 현재 1)을 뺀다.
+                        calcNum -= arr[lt];
+
+                        //arr[lt]를 뺏기 때문에 lt를 2로 증가 시킨다.
+                        lt++;
+                    }
+                    else if(calcNum < M) {
+                        rt++;
+                        calcNum += arr[rt]; 
+                    }
+                    else if(calcNum > M) {
+                        //1+2+1+3 => 7일떄 맨 처음 1(arr[lt])를 빼 본다.
+                        calcNum -= arr[lt];
+
+                        //arr[lt]를 뺏기 떄문에 lt를 1로 증가시킨다.
+                        lt++;
+                    }
+                    
+                }
+
                 return answer;
 
             }
