--- a/코테/섹션6/[01] 올바른 괄호.html
+++ b/코테/섹션6/[01] 올바른 괄호.html
@@ -6,34 +6,45 @@
     <body>
         <script>
             function solution(arr) {
-                let answer = "";
-                arr = arr.split('');
-
+                let answer = "YES";
+                //해쉬
+                /*
                 let arrSet = Array.from([...new Set(arr)]);
-                let arrObe = [];
-                
-                arrSet.map((a, i) => {
-                    arrObe.push({
-                        str: a,
-                        num: numCount(a, 0),
-                    });
-                });
 
-                
-                //a는 arrSet의 값으로, 중복을 제거해 괄호 "(", ")" 단 2개만 있다.
-                //b는 arr의 값으로 솔루션의 매개변수로 입력받은 모든 괄호를 가지고 있다.
-                //a랑 b를 비교해서 같은 경우에 n을 증가시킨다.
-                function numCount(a, n) {
-                    arr.filter(b => {
-                        if(a === b) {
-                            n += 1;
-                        }
-                    });
-                    return n;
+                let sH1 = new Map();
+                let sH2 = new Map();
+
+                for(let x of arr) {
+                    if(x === arrSet[0]) {
+                        if(sH1.has(x)) sH1.set(x, sH1.get(x)+1);
+                        else sH1.set(x, 1);   
+                    } else {
+                        if(sH2.has(x)) sH2.set(x, sH2.get(x)+1);
+                        else sH2.set(x, 1);   
+                    }
                 }
+                for(let [key, val] of sH1) {
+                    for(let [key2, val2] of sH2) {
+                        if(val === val2) answer = "YES";
+                        else answer = "NO";
+                    }
+                }
+                */
 
-                if(arrObe[0].num === arrObe[1].num) answer = "YES";
-                else answer = "NO";
+                //스택
+                let stack = [];
+                for(let x of arr) {
+                    //여는 괄호면 스택에 쌓아주기
+                    if(x === '(') {
+                        stack.push(x);
+                    } else {
+                        //스택 length가 0이면 answer을 NO로 만들기                        
+                        if(stack.length === 0) answer = "NO";
+
+                        //닫는 괄호면 스택에 쌓아둔 여는 괄호 하나 삭제하기
+                        stack.pop();
+                    }
+                }
 
                 return answer;
             }
